--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body{
+    height: 100vh;
+    background-color: rgb(39 39 39);
+    color: #F0E7E7
+}
